--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html">Transit</a></h1>
+				<h1><a href="https://www.facebook.com/alec.hsu.56">Alec</a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
