--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<title>Personal Website</title>
 	<meta charset='utf-8'>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width; initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>hahahahahaha</title>
-	<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 </head>
 
@@ -111,19 +111,19 @@
 					</div>
 					
 					<div class="progress">
-						<div class="progress-bar progress-bar-primary" role="progressbar" style="width: 70%;">
+						<div class="progress-bar progress-bar-success" role="progressbar" style="width: 70%;">
 							Css 7/10
 						</div>
 					</div>
 
 					<div class="progress">
-						<div class="progress-bar progress-bar-primary" role="progressbar" style="width: 70%;">
+						<div class="progress-bar progress-bar-warning" role="progressbar" style="width: 70%;">
 							Javascript 7/10
 						</div>
 					</div>
 
 					<div class="progress">
-						<div class="progress-bar progress-bar-primary" role="progressbar" style="width: 70%;">
+						<div class="progress-bar progress-bar-danger" role="progressbar" style="width: 70%;">
 							jQuery 7/10
 						</div>
 					</div>
@@ -181,7 +181,7 @@
 
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="/js/main.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 	
 </body>
 </html>
