--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 	<meta charset='utf-8'>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body data-spy="scroll" data-target="#navbar">
 	
 	<!--nav bar -->
 	
-	<nav class="navbar navbar-default navbar-fixed-top">
+	<nav class="navbar navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
 				<button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar">
@@ -51,12 +51,16 @@
 	<div id="home" class="section">
 		<div class="container">
 			<div class="row">
+				<div id="profilepic"></div>
+				<!--<img src="images/Alec.jpg class="img-circle">-->
+				<!--http://graph.facebook.com/alec.hsu.56/picture?type=large -->
+
 				<h2>
 					I'm Alec
-					<br/>
+					<br>
 					Learning about Coding
 				</h2>
-				<a href="#profile" class="btn btn-primary btn-lg slide_to_profile">more</a>
+				<a href="#profile" class="btn btn-default btn-lg slide_to_profile" style="background-color: #70809f; color: #fff;">more</a>
 			</div>
 		</div>
 	</div>
@@ -66,26 +70,25 @@
 			<div class="row">
 				<h1>我很高興你的拜訪</h1>
 				<h3>我設計了這個網站</h3>
-				<img src="http://graph.facebook.com/1121422942/picture?type=large" class="img-circle">
 			</div>
 
 			<div class="row">
 				<div class="col-md-4">
 					<span class="glyphicon glyphicon-globe img-circle"></span>
 					<h3>Travel</h3>
-					<h4 class="text-muted">123</h4>
+					<h4>123</h4>
 				</div>
 
 				<div class="col-md-4">
 					<span class="glyphicon glyphicon-film img-circle"></span>
 					<h3>Movie</h3>
-					<h4 class="text-muted">123</h4>
+					<h4>123</h4>
 				</div>
 
 				<div class="col-md-4">
 					<span class="glyphicon glyphicon-off img-circle"></span>
 					<h3>Soccer</h3>
-					<h4 class="text-muted">123</h4>
+					<h4>123</h4>
 				</div>
 			</div>
 		</div>
@@ -144,7 +147,7 @@
 
 				<div class="col-md-3">
 					<div class="form-group">
-						<div class="col-md-12"><input type="text" class="form-control" name="name" placeholder="Name"></div>
+						<div class="col-md-12"><input type="text" class="form-control" name="name" placeholder="Name"><br></div>
 					</div>
 
 					<div class="form-group">
@@ -156,8 +159,7 @@
 					<div class="form-group">
 						<div class="col-md-12">
 							<textarea class="form-control" name="message" rows="4" placeholder="Message" required ></textarea>
-
-							<br/>
+							<br>
 						</div>
 					</div>
 				</div>
@@ -173,14 +175,13 @@
 		<div class="container">
 			<hr>
 			<p class="text-center">
-				<small>2015.Bootstrap Web Page by Alec</small>
+				&copy;2015.Bootstrap Web Page by Alec
 			</p>
 		</div>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
-	
+	<script type="text/javascript" src="js/main.js"></script>	
 </body>
 </html>
