change font, fix img RWD
1

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 </head>
 
 <body data-spy="scroll" data-target="#navbar">
@@ -51,7 +52,7 @@
 	<div id="home" class="section">
 		<div class="container">
 			<div class="row">
-				<div id="profilepic"></div>
+				<div id="profilepic">yo</div>
 				<!--<img src="images/Alec.jpg class="img-circle">-->
 				<!--http://graph.facebook.com/alec.hsu.56/picture?type=large -->
 
