--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<div id="home" class="section">
 		<div class="container">
 			<div class="row">
-				<div id="profilepic">yo</div>
+				<div id="profilepic"></div>
 				<!--<img src="images/Alec.jpg class="img-circle">-->
 				<!--http://graph.facebook.com/alec.hsu.56/picture?type=large -->
 
