--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<a href="#" class="navbar-brand">ALEC</a>
 			</div>
 			
-			<div id="navbar" class="collapse navbar-collapse pull-right">
+			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
 					<li class="active">
 						<a href="#home">Home</a>
@@ -69,7 +69,7 @@
 	<div id="profile" class="section">
 		<div class="container">
 			<div class="row">
-				<h1>我很高興你的拜訪</h1>
+				<h2>我很高興你的拜訪</h2>
 				<h3>我設計了這個網站</h3>
 			</div>
 
@@ -138,7 +138,7 @@
 	<div id="contact" class="section">
 		<div class="container">
 			<div class="row">
-				<h1>Say Hi!</h1>
+				<h2>Say Hi!</h2>
 				
 				<h4 class="Text-muted">Feel free to ask!</h4>
 				
