add firehose chat
*

--- a/index.html
+++ b/index.html
@@ -172,6 +172,11 @@
 		</div>
 	</div>
 
+	<script type="text/javascript">
+	  var FHChat = {product_id: "7e4efedacdaf"};
+	  FHChat.properties={};FHChat.set=function(key,data){this.properties[key]=data};!function(){var a,b;return b=document.createElement("script"),a=document.getElementsByTagName("script")[0],b.src="https://chat-client-js.firehoseapp.com/chat-min.js",b.async=!0,a.parentNode.insertBefore(b,a)}();
+	</script>
+
 	<div class="footer">
 		<div class="container">
 			<hr>
