update short cut key

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		<div class="col-sm-2"></div>
 
 		<div class="col-sm-2 col-xs-5">
-			<button class="btn btn-danger btn-lg btnAnswer" type="submit">answer </br> (Enter)</button>
+			<button class="btn btn-danger btn-lg btnAnswer" type="submit">answer</button>
 		</div>
 
 		<div class="col-sm-4 col-xs-2 visible-lg"><h2><span class="label label-default answer answerWeb">{{answer}}</span></h2></div>
@@ -90,7 +90,7 @@
 
 
 		<div class="col-sm-2 col-xs-5">
-			<button class="btn btn-primary btn-lg btnNext" type="submit">next </br> (+)</button>
+			<button class="btn btn-primary btn-lg btnNext" type="submit">next</button>
 		</div>
 
 		<div class="col-sm-2"></div>
