--- a/index.html
+++ b/index.html
@@ -1,125 +1,23 @@
 <!DOCTYPE html>
-<html ng-app="QuizUrself" lang="en">
 <head>
-	<title>QuizUrself</title>
 	<meta charset='utf-8'>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
-
-    <!-- Angular -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-
-    <!-- Firebase -->
-	<!-- <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script> -->
-
-    <!-- AngularFire -->
-	<script src="https://cdn.firebase.com/libs/angularfire/1.1.2/angularfire.min.js"></script>
-
-    <!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
-    <!-- CSS -->
-	<link rel="stylesheet" type="text/css" href="style.css">
-
-    <!-- Google font -->
-	<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+	<!-- Bootstrap CSS -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-
-
-<body ng-controller="MainController">
-	<nav class="navbar navbar-info navbar-fixed-top">
-		<div class="row">
-			<button type="button" class="col-xs-12 btn btn-info btn-lg btnList">
-				<span class="glyphicon glyphicon-th-list"></span> &nbsp QuizUrself
-			</button>
-		</div>
-	</nav>
-
-
-	<nav class="navbar navbar-info navbar-static-top">
-	  <div class="row">
-	    <button type="button" class="col-xs-12 btn btn-default btn-lg"></button>
-	  </div>
-	</nav>
-
-
-	<table class="table list">
-		<tr ng-repeat="(key, value) in dicts" class="row">
-			<td class="danger col-xs-4">{{ $index+1 }}</td>
-			<td class="active col-xs-4"><a ng-href="http://dictionary.reference.com/browse/{{key}}">{{ key }}</a></td>
-			<td class="info col-xs-4">{{ value }}</td>
-		</tr>
-	</table>
-
-
-	<div class="quizArea">
-		<div class="row">
-
-			<div class="col-md-4 col-xs-2"></div>
-
-			<div class="col-md-4 col-xs-8">
-				<div class="panel panel-default">
-				  <div class="panel-heading wordHover">
-					    <h3 class="panel-title word" style="font-size: 22px">{{word}}</h3>
-				  </div>
-				    <input type="text" class="form-control meaning" placeholder="What's your answer?" aria-describedby="sizing-addon1">
-				</div>
-			</div>
-
-			<div class="col-md-4 col-xs-2"></div>
-
+<body>
+	<div class="jumbotron text-center">
+		<h2>CS560 Data Visualization</h2>
+		<h3>Assignment 2 - Alec Hsu</h3>
+		<div class="list-group">
+		  <a href="https://bl.ocks.org/hsu022210/64d7290897ce6ddbf1b8f98b4f28a49f" class="list-group-item">Bar Chart</a>
+		  <a href="https://bl.ocks.org/hsu022210/db522fb364c0ed734d59cd1f761953d9" class="list-group-item">Line Chart</a>
+		  <a href="https://bl.ocks.org/hsu022210/06146318be9143a637ef94f9b6d1bd47" class="list-group-item">Scatter Plot (bivariate)</a>
+		  <a href="https://bl.ocks.org/hsu022210/6d66386a3443865a2832433998ad16f6" class="list-group-item">Scatter Plot (trivariate)</a>
+		  <a href="https://bl.ocks.org/hsu022210/646eda9d4cb3c0dbf3f46ff2f6e5bed1" class="list-group-item">Trellis Plots</a>
+		  <a href="https://bl.ocks.org/hsu022210/d0ea9d31a8c82e9bc43dc92127c15554" class="list-group-item">Scatter Matrix (splom)</a>
+		  <a href="https://bl.ocks.org/hsu022210/f0a2b4af39b1ac97a361ce0ae39da5b6" class="list-group-item">Sparallel Coordinates</a>
 		</div>
 	</div>
-
-
-	<div class="xsAnswer row">
-		<div class="col-xs-12 hidden-lg"><h2 class="answer answerMobile">{{answer}}</h2></div>
-	</div>
-
-	<div class="btnArea row">
-
-		<div class="col-sm-2"></div>
-
-		<div class="col-sm-2 col-xs-5">
-			<button class="btn btn-danger btn-lg btnAnswer" type="submit">answer</button>
-		</div>
-
-		<div class="col-sm-4 col-xs-2 visible-lg"><h2><span class="label label-default answer answerWeb">{{answer}}</span></h2></div>
-
-		<div class="col-sm-4 col-xs-2 hidden-lg"></div>
-
-
-		<div class="col-sm-2 col-xs-5">
-			<button class="btn btn-primary btn-lg btnNext" type="submit">next</button>
-		</div>
-
-		<div class="col-sm-2"></div>
-
-	</div>
-
-	<div class="footer">
-		<div class="container">
-			<br>
-			<br>
-			<p class="text-center" style="color: #9f9f9f">
-				&copy;2015.QuizUrself by Alec -- hsu022210@gmail.com
-			</p>
-		</div>
-	</div>
-
-
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-
-    <!-- Bootstrap JS -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
-	<!-- Modules -->
-    <script src="js/app.js"></script>
-
-	<!-- Controllers -->
-    <script src="js/controllers/MainController.js"></script>
-
-
 </body>
 </html>
