--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 		  <a href="https://bl.ocks.org/hsu022210/d0ea9d31a8c82e9bc43dc92127c15554" class="list-group-item">Scatter Matrix (splom)</a>
 		  <a href="https://bl.ocks.org/hsu022210/f0a2b4af39b1ac97a361ce0ae39da5b6" class="list-group-item">Sparallel Coordinates</a>
 		</div>
+
+		<h3>Assignment 3 - Alec Hsu</h3>
+		<div class="list-group">
+		  <a href="https://bl.ocks.org/hsu022210/e9b0b2e7deab2023683c0da72fb707fc" class="list-group-item">Matrix</a>
+		</div>
 	</div>
 </body>
 </html>
