--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<div class="jumbotron text-center">
-		<h2>CS560 Data Visualization</h2>
-		<h3>Assignment 2 - Alec Hsu</h3>
+		<h2>CS560 Data Visualization - Alec Hsu</h2>
+		<h3>Assignment 2</h3>
 		<div class="list-group">
 		  <a href="https://bl.ocks.org/hsu022210/64d7290897ce6ddbf1b8f98b4f28a49f" class="list-group-item">Bar Chart</a>
 		  <a href="https://bl.ocks.org/hsu022210/db522fb364c0ed734d59cd1f761953d9" class="list-group-item">Line Chart</a>
@@ -20,9 +20,10 @@
 		</div>
 
 		<br>
-		<h3>Assignment 3 - Alec Hsu</h3>
+		<h3>Assignment 3</h3>
 		<div class="list-group">
 		  <a href="https://bl.ocks.org/hsu022210/e9b0b2e7deab2023683c0da72fb707fc" class="list-group-item">Matrix</a>
+		  <a href="https://bl.ocks.org/hsu022210/9a184a68b47b64f67b744bc108c38541" class="list-group-item">Force Directed Graph</a>
 		</div>
 	</div>
 </body>
