--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
 		  <a href="https://bl.ocks.org/hsu022210/e9b0b2e7deab2023683c0da72fb707fc" class="list-group-item">Matrix</a>
 		  <a href="https://bl.ocks.org/hsu022210/9a184a68b47b64f67b744bc108c38541" class="list-group-item">Force Directed Graph</a>
 		</div>
+		
+		<br>
+		<h3>Assignment 4</h3>
+		<div class="list-group">
+		  <a href="https://bl.ocks.org/hsu022210/d6e8944aca6349d2a42f324c5b49341f" class="list-group-item">Bar Chart</a>
+		  <a href="https://bl.ocks.org/hsu022210/4cfd36482dbe71da014d6014f3d29e61" class="list-group-item">Line Chart</a>
+		  <a href="https://bl.ocks.org/hsu022210/1a3b381b7b4ef117b1ab7bea4415187a" class="list-group-item">Scatter Plot (bivariate)</a>
+		  <a href="https://bl.ocks.org/hsu022210/6df9ab8a6652b5409cac1a9e22d410e7" class="list-group-item">Scatter Plot (trivariate)</a>
+		  <a href="https://bl.ocks.org/hsu022210/b2a1aba9957f92a9deb9430046ed1918" class="list-group-item">Trellis Plot</a>
+		  <a href="https://bl.ocks.org/hsu022210/d687f8bd861ad83f0e1842f4e543d046" class="list-group-item">Scatter Plot Matrix</a>
+		  <a href="https://bl.ocks.org/hsu022210/51bd2a334cbca7c2e33abfde8872efd7" class="list-group-item">Parallel Coordinate Plot</a>
+		</div>
 	</div>
 </body>
 </html>
