add link to line chart for final project

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
 		<div class="list-group">
 		  <a href="https://bl.ocks.org/hsu022210/e9feda39ddecec4a7989c051beec1df2" class="list-group-item">Multi-Series Line Chart</a>
 		</div>
+
+		<br>
+		<h3>Final Project Charts</h3>
+		<div class="list-group">
+		  <a href="anychartLine.html" class="list-group-item">Line Chart for Trend of Average Crime Rate in United States</a>
+		</div>
+
 	</div>
 </body>
 </html>
