--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<br>
 		<h3>Final Project Charts</h3>
 		<div class="list-group">
-		  <a href="https://bl.ocks.org/hsu022210/8f89617a22dab572b973cb512b7611da" class="list-group-item">Line Chart for Trend of Average Crime Rate in United States</a>
+		  <a href="anychartLine.js" class="list-group-item">Line Chart for Trend of Average Crime Rate in United States</a>
 		</div>
 
 	</div>
