--- a/usMapCrimeRate.html
+++ b/usMapCrimeRate.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>D3: Loading GeoJSON data and generating SVG paths</title>
 		<script src="https://d3js.org/d3.v4.min.js"></script>
-		<script src="http://d3js.org/colorbrewer.v1.min.js"></script>
+		<script src="https://d3js.org/colorbrewer.v1.min.js"></script>
 		<style type="text/css">
 			/* No style rules here yet */
 		</style>
