--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 		<br>
 		<h3>Final Project Charts</h3>
 		<div class="list-group">
-		  <a href="anychartLine.html" class="list-group-item">Line Chart for Trend of Average Crime Rate in United States</a>
-		  <a href="usMapCrimeRate.html" class="list-group-item">Choropleth Map for Average Crime Rate of Property in USA in 53 Years</a>
+		  <a href="usMapPropertyRate.html" class="list-group-item">Choropleth Map for Average Crime Rate of USA in Years</a>
 		</div>
 
 	</div>
