--- a/usMapPropertyRate.html
+++ b/usMapPropertyRate.html
@@ -40,20 +40,20 @@
 
   <body>
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Final Project</a>
+      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="usMapPropertyRate.html">Final Project</a>
       <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
-      <ul class="navbar-nav px-3">
+      <!-- <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
           <a class="nav-link" href="#">Sign out</a>
         </li>
-      </ul>
+      </ul> -->
     </nav>
 
     <div class="container-fluid">
       <div class="row">
         <nav class="col-md-2 d-none d-md-block bg-light sidebar">
           <div class="sidebar-sticky">
-              <ul class="nav flex-column">
+              <!-- <ul class="nav flex-column">
                 <li class="nav-item">
                   <a class="nav-link active" href="#">
                     <span data-feather="home"></span>
@@ -72,25 +72,7 @@
                     Choropleth Map
                   </a>
                 </li>
-                <!-- <li class="nav-item">
-                  <a class="nav-link" href="#">
-                    <span data-feather="users"></span>
-                    Customers
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">
-                    <span data-feather="bar-chart-2"></span>
-                    Reports
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">
-                    <span data-feather="layers"></span>
-                    Integrations
-                  </a>
-                </li> -->
-              </ul>
+              </ul> -->
 
             <!-- <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
               <span>Saved reports</span>
@@ -129,7 +111,7 @@
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4 main">
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-            <h1 class="h2"># of Reported Offenses per 100,000 Population in USA</h1>
+            <h2 class="h2">Average Crime Rate of USA in Years</h2>
             <div class="btn-toolbar mb-2 mb-md-0">
               <!-- <div class="btn-group mr-2">
                 <button class="btn btn-sm btn-outline-secondary">Share</button>
@@ -154,10 +136,8 @@
           </div>
 
           <!-- <canvas class="my-4" id="container" width="900" height="380"></canvas> -->
-          <div class="my-4" id="containerMap" style="height:35em;"></div>
-          <br>
+          <div class="my-4" id="containerMap"></div>
           <div class="my-4" id="container" style="height:35em;"></div>
-          <!-- <div class="my-4" id="containerTest" style="height:35em;"></div> -->
         </main>
       </div>
     </div>
@@ -167,7 +147,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript" src="usMapPropertyRate.js"></script>
-    <script type="text/javascript" src="usMapLine.js"></script>
+    <script type="text/javascript" src="usMapLine.js" crime_type="Property"></script>
 
   </body>
 </html>
