--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<br>
 		<h3>Final Project Charts</h3>
 		<div class="list-group">
-		  <a href="usMapPropertyRate.html" class="list-group-item">Choropleth Map for Average Crime Rate of USA in Years</a>
+		  <a href="usMapPropertyRate.html" class="list-group-item">Project Website</a>
 		</div>
 
 	</div>
