--- a/usMapViolentRate.html
+++ b/usMapViolentRate.html
@@ -111,7 +111,7 @@
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-            <h2 class="h2">Average Crime Rate of USA in Years</h2>
+            <h2 class="h2">Average Crime Rate of USA for a Year</h2>
             <div class="btn-toolbar mb-2 mb-md-0">
               <!-- <div class="btn-group mr-2">
                 <button class="btn btn-sm btn-outline-secondary">Share</button>
@@ -137,7 +137,8 @@
 
           <!-- <canvas class="my-4" id="container" width="900" height="380"></canvas> -->
           <div class="my-4" id="containerMap"></div>
-          <div class="my-4" id="container" style="height:35em;"></div>
+          <div class="my-4" id="containerLine" style="height:35em;"></div>
+          <div class="my-4" id="containerPie" style="height:35em;"></div>
         </main>
       </div>
     </div>
@@ -148,6 +149,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript" src="mapRate.js" crime_type="Violent"></script>
     <script type="text/javascript" src="lineRate.js" crime_type="Violent"></script>
+    <script type="text/javascript" src="pieRate.js" crime_type="Violent"></script>
 
   </body>
 </html>
