--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <body>
 	<div class="jumbotron text-center">
 		<h2>CS560 Data Visualization - Alec Hsu</h2>
-		<h3>(Gonna be CS560 Final Project Site as well)</h3>
 
 		<br>
 		<h3>Assignment 2</h3>
@@ -36,7 +35,7 @@
 		</div>
 
 		<br>
-		<h3>Final Project Charts</h3>
+		<h3>Final Project</h3>
 		<div class="list-group">
 		  <a href="property.html" class="list-group-item">Project Website</a>
 		</div>
