--- a/property.html
+++ b/property.html
@@ -78,13 +78,13 @@
       <section class="jumbotron text-center main-background text-white">
         <div class="container">
           <h1 class="jumbotron-heading">Crime Rate</h1>
-          <p class="lead text-muted">Rate is the number of Reported Offenses per 100,000 Population</p>
+          <p class="lead">Rate is the number of Reported Offenses per 100,000 Population</p>
           <div class="row justify-content-center">
               <div class="col-md-3">
-                  <a href="property.html" class="btn btn-primary btn-block my-2">Property</a>
+                  <a href="property.html" class="btn btn-danger btn-block my-2">Property</a>
               </div>
               <div class="col-md-3">
-                  <a href="violent.html" class="btn btn-outline-primary btn-block my-2">Violent</a>
+                  <a href="violent.html" class="btn btn-outline-danger btn-block my-2 text-white">Violent</a>
               </div>
           </div>
         </div>
@@ -110,6 +110,7 @@
                         <p>
                             <input type="range" min="1960" max="2012" id="slider" class="slider">
                         </p>
+                        <!-- <button id="play">play</button> -->
                     </div>
                 </div>
 
@@ -149,6 +150,7 @@
     <script type="text/javascript" src="lineRate.js" crime_type="Property" defaultYear="1960"></script>
     <script type="text/javascript" src="pieRate.js" crime_type="Property" defaultYear="1960"></script>
     <script type="text/javascript" src="scrollToTop.js"></script>
+    <!-- <script type="text/javascript" src="animatePlay.js"></script> -->
 
   </body>
 </html>
