--- a/violent.html
+++ b/violent.html
@@ -78,13 +78,13 @@
         <section class="jumbotron text-center main-background text-white">
           <div class="container">
             <h1 class="jumbotron-heading">Crime Rate</h1>
-            <p class="lead text-muted">Rate is the number of Reported Offenses per 100,000 Population</p>
+            <p class="lead">Rate is the number of Reported Offenses per 100,000 Population</p>
             <div class="row justify-content-center">
                 <div class="col-md-3">
-                    <a href="property.html" class="btn btn-outline-primary btn-block my-2">Property</a>
+                    <a href="property.html" class="btn btn-outline-danger btn-block my-2 text-white">Property</a>
                 </div>
                 <div class="col-md-3">
-                    <a href="violent.html" class="btn btn-primary btn-block my-2">Violent</a>
+                    <a href="violent.html" class="btn btn-danger btn-block my-2">Violent</a>
                 </div>
             </div>
           </div>
