change project website link and folder

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<br>
 		<h3>Final Project</h3>
 		<div class="list-group">
-		  <a href="property.html" class="list-group-item">Project Website</a>
+		  <a href="https://hsu022210.github.io/DataVizFinalProject/" class="list-group-item">Project Website</a>
 		</div>
 
 	</div>
